--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
     justify-content: space-between;
 }
 
+.gap-1 {
+    gap: 10px;
+}
+
 .gap-3 {
     gap: 30px;
 }
@@ -57,6 +61,10 @@ body {
 
 .padd-lr {
     padding: 0px 20px 0px 20px;
+}
+
+.mt-1 {
+    margin-top: 10px;
 }
 
 .mt-2 {
@@ -153,6 +161,12 @@ body {
 
 
 
+.profile-pic{
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+}
+
 
 #create-post {
     padding: 8px 20px;
@@ -186,7 +200,7 @@ body {
 #signup-box,
 #create-post-box {
     width: 500px;
-    padding: 50px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 1px 1px 50px #d1d1d1b4;
     background-color: #fbf8ffb4;
@@ -202,7 +216,7 @@ body {
 #post-title,
 #post-description {
     width: 100%;
-    margin: 10px 0px;
+    margin: 8px 0px;
     padding: 13px;
     border: none;
     outline: none;
